crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-no_vector_engine-no_text_engine-view_union_all_join-multi_embeddings_megascience_vector_search_sql_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
[
  {
    "id": 189,
    "_score": 0.41
  },
  {
    "id": 212,
    "_score": 0.379
  },
  {
    "id": 1277,
    "_score": 0.375
  },
  {
    "id": 195,
    "_score": 0.347
  }
]
